# Boardurance

./: .cursorrules  .gitignore  BRANCH_RENAME_SUMMARY.md  ENVIRONMENT_SETUP.md  QUICK_START.md  start-full-stack.ps1  stop-full-stack.ps1  temp_check_role.js  temp_make_admin.js
rust-backend/: .env.example  .gitignore  Cargo.toml  DOCKER_SETUP.md  Makefile.ps1  PLAYER_SYSTEM.md  README.md  SCRIPT_AUDIT.md  TEST_REORGANIZATION_SUMMARY.md  ci-test.ps1  clippy-fixes.patch  docker-compose.test.yml  docker-compose.yml  fix-tracing.ps1  run-unit-tests.ps1  simple_test.ps1  test-create-player-with-assets.ps1  test-docker-setup.ps1  test-moveable-configuration.ps1  test-player-endpoints.ps1  test-player-uuid-endpoints.ps1  test_server.ps1  verify-docker-setup.ps1
rust-backend/.cargo/: config.toml
rust-backend/configuration/: base.yaml  test.yaml
rust-backend/docker/: mongo-init.js  mongo-test-init.js
rust-backend/scripts/: create-admin-user.ps1  start-mongodb.ps1  start-test-mongodb.ps1  stop-mongodb.ps1  test-with-mongodb.ps1
rust-backend/src/: app_state.rs  configuration.rs  lib.rs  main.rs  simple_test.rs  startup.rs  telemetry.rs  test_utils.rs
rust-backend/src/domain/: auth.rs  body.rs  (+8 more)
rust-backend/tests/: README.md  auth_integration_tests.rs  authorization_integration_tests.rs  boost_card_integration_tests.rs  boost_card_integration_tests_README.md  boost_card_unit_tests.rs  configuration_test.rs  mock_repository_basic_test.rs  mock_repository_tests.rs  protected_routes_integration_tests.rs  run-all-tests.ps1  security_edge_cases_tests.rs  simple_mock_test.rs
(+243 files in other folders)
