[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[lints.clippy]
# Enable pedantic lints for better code quality
pedantic = { level = "warn", priority = -1 }
# Allow some pedantic lints that might be too strict for this project
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
async-trait = "0.1"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
anyhow = "1.0"
thiserror = "1.0"
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
config = "0.14"
secrecy = { version = "0.8", features = ["serde"] }
unicode-segmentation = "1.10"
rand = "0.8"
argon2 = "0.5"
password-hash = "0.5"
jsonwebtoken = "9.2"
axum-extra = { version = "0.9", features = ["cookie"] }
futures-util = "0.3"
time = "0.3"

[[bin]]
name = "create_admin"
path = "src/bin/create_admin.rs"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }